feat: add the transaction list filter
